@@ -2077,6 +2077,15 @@ test(743, DT[,2:3:=99L], data.table(c1=1:3,c2=99L,c3=99L))
 test(744, DT[,(ncol(DT)+1):=1L], error="outside.*range")
 test(745, DT[,ncol(DT):=1L], data.table(c1=1:3,c2=99L,c3=1L)) 
 
+# multiple LHS with by without by, #2215
+DT = data.table(a=letters[c(1:3,3L)],key="a")
+test(746, DT["a",c("new1","new2"):=list(4L, 5L)],
+          data.table(a=letters[c(1:3,3L)],new1=INT(4,NA,NA,NA),new2=INT(5,NA,NA,NA),key="a"))
+test(747, DT[,new1:=4:6], warning="recycled leaving remainder of 1 item")
+suppressWarnings(DT[,new1:=4:6])
+test(748, DT[c("c","b"),`:=`(new3=.N,new2=sum(new1)+1L)], data.table(a=letters[c(1:3,3L)],new1=INT(4,5,6,4),new2=INT(5,6,11,11),new3=INT(NA,1,2,2),key="a"))
+
+
 
 # TO DO: add examples of multiple LHS (name and position) and multiple RHS to example(":=")
 
