@@ -183,72 +183,74 @@ SEXP dogroups(SEXP dt, SEXP dtcols, SEXP groups, SEXP grpcols, SEXP jiscols, SEX
         }
         // TO DO: check if direct NULL in user j is auto wrapped to make list(NULL) (length 1)
         if (!isNull(lhs)) {
-            targetcol = VECTOR_ELT(dt,INTEGER(lhs)[0]-1);
-            RHS = VECTOR_ELT(jval,0);
-            if (isNull(targetcol)) {
-                // first time adding to new column
-                if (isNull(RHS)) error("RHS is NULL when grouping :=. Makes no sense to delete a column by group. Perhaps use an empty vector instead.");
-                if (TRUELENGTH(dt) < INTEGER(lhs)[0]) error("Internal error: Trying to add new column by reference but tl is full; alloc.col should have run first at R level before getting to this point in dogroups");
-                SET_VECTOR_ELT(dt,INTEGER(lhs)[0]-1,allocNAVector(TYPEOF(RHS), LENGTH(VECTOR_ELT(dt,0))));
-                dtnames = getAttrib(dt, R_NamesSymbol);
-                SET_STRING_ELT(dtnames, INTEGER(lhs)[0]-1, STRING_ELT(newnames,0));
-                SETLENGTH(dtnames, LENGTH(dtnames)+1);
-                SETLENGTH(dt, LENGTH(dt)+1);
-                targetcol = VECTOR_ELT(dt,INTEGER(lhs)[0]-1);
-            }
-            if (TYPEOF(targetcol)!=TYPEOF(RHS)) error("Type of RHS ('%s') must match LHS ('%s'). To check and coerce would impact performance too much for the fastest cases. Either change the type of the target column, or coerce the RHS of := yourself (e.g. by using 1L instead of 1)", type2char(TYPEOF(RHS)), type2char(TYPEOF(targetcol)));
-            size = SIZEOF(targetcol);
-            vlen = length(RHS);
-            if (length(order)==0) {
-                rownum = INTEGER(starts)[i]-1;
-                switch (TYPEOF(targetcol)) {
-                case STRSXP :
-                    for (r=0; r<grpn; r++)
-                        SET_STRING_ELT(targetcol, rownum+r, STRING_ELT(RHS, r%vlen));
-                    break;
-                case VECSXP :
-                    for (r=0; r<grpn; r++)
-                        SET_VECTOR_ELT(targetcol, rownum+r, STRING_ELT(RHS, r%vlen));
-                    break;
-                default :
-                    for (r=0; r<(grpn/vlen); r++) {
+            for (j=0; j<length(lhs); j++) {
+                targetcol = VECTOR_ELT(dt,INTEGER(lhs)[j]-1);
+                RHS = VECTOR_ELT(jval,j%LENGTH(jval));
+                if (isNull(targetcol)) {
+                    // first time adding to new column
+                    if (isNull(RHS)) error("RHS is NULL when grouping :=. Makes no sense to delete a column by group. Perhaps use an empty vector instead.");
+                    if (TRUELENGTH(dt) < INTEGER(lhs)[j]) error("Internal error: Trying to add new column by reference but tl is full; alloc.col should have run first at R level before getting to this point in dogroups");
+                    SET_VECTOR_ELT(dt,INTEGER(lhs)[j]-1,allocNAVector(TYPEOF(RHS), LENGTH(VECTOR_ELT(dt,0))));
+                    dtnames = getAttrib(dt, R_NamesSymbol);
+                    SET_STRING_ELT(dtnames, INTEGER(lhs)[j]-1, STRING_ELT(newnames,j));
+                    SETLENGTH(dtnames, LENGTH(dtnames)+1);
+                    SETLENGTH(dt, LENGTH(dt)+1);
+                    targetcol = VECTOR_ELT(dt,INTEGER(lhs)[j]-1);
+                }
+                if (TYPEOF(targetcol)!=TYPEOF(RHS)) error("Type of RHS ('%s') must match LHS ('%s'). To check and coerce would impact performance too much for the fastest cases. Either change the type of the target column, or coerce the RHS of := yourself (e.g. by using 1L instead of 1)", type2char(TYPEOF(RHS)), type2char(TYPEOF(targetcol)));
+                size = SIZEOF(targetcol);
+                vlen = length(RHS);
+                if (length(order)==0) {
+                    rownum = INTEGER(starts)[i]-1;
+                    switch (TYPEOF(targetcol)) {
+                    case STRSXP :
+                        for (r=0; r<grpn; r++)
+                            SET_STRING_ELT(targetcol, rownum+r, STRING_ELT(RHS, r%vlen));
+                        break;
+                    case VECSXP :
+                        for (r=0; r<grpn; r++)
+                            SET_VECTOR_ELT(targetcol, rownum+r, STRING_ELT(RHS, r%vlen));
+                        break;
+                    default :
+                        for (r=0; r<(grpn/vlen); r++) {
+                            memcpy((char *)DATAPTR(targetcol) + (rownum+r*vlen)*size,
+                                   (char *)DATAPTR(RHS),
+                                   vlen * size);
+                        }
                         memcpy((char *)DATAPTR(targetcol) + (rownum+r*vlen)*size,
                                (char *)DATAPTR(RHS),
-                               vlen * size);
+                               (grpn%vlen) * size);
                     }
-                    memcpy((char *)DATAPTR(targetcol) + (rownum+r*vlen)*size,
-                           (char *)DATAPTR(RHS),
-                           (grpn%vlen) * size);
-                }
-            } else {
-                switch (TYPEOF(targetcol)) {
-                case STRSXP :
-                    for (k=0; k<grpn; k++) {
-                        rownum = INTEGER(order)[ INTEGER(starts)[i]-1 + k ] -1;
-                        SET_STRING_ELT(targetcol, rownum, STRING_ELT(RHS, k%vlen));
+                } else {
+                    switch (TYPEOF(targetcol)) {
+                    case STRSXP :
+                        for (k=0; k<grpn; k++) {
+                            rownum = INTEGER(order)[ INTEGER(starts)[i]-1 + k ] -1;
+                            SET_STRING_ELT(targetcol, rownum, STRING_ELT(RHS, k%vlen));
+                        }
+                        break;
+                    case VECSXP :
+                        for (k=0; k<grpn; k++) {
+                            rownum = INTEGER(order)[ INTEGER(starts)[i]-1 + k ] -1;
+                            SET_VECTOR_ELT(targetcol, rownum, VECTOR_ELT(RHS, k%vlen));
+                        }
+                        break;
+                    case INTSXP :
+                    case LGLSXP :
+                        for (k=0; k<grpn; k++) {
+                            rownum = INTEGER(order)[ INTEGER(starts)[i]-1 + k ] -1;
+                            INTEGER(targetcol)[rownum] = INTEGER(RHS)[k%vlen];
+                        }
+                        break;
+                    case REALSXP :
+                        for (k=0; k<grpn; k++) {
+                            rownum = INTEGER(order)[ INTEGER(starts)[i]-1 + k ] -1;
+                            REAL(targetcol)[rownum] = REAL(RHS)[k%vlen];
+                        }
+                        break;
+                    default :
+                        error("Unsupported type");
                     }
-                    break;
-                case VECSXP :
-                    for (k=0; k<grpn; k++) {
-                        rownum = INTEGER(order)[ INTEGER(starts)[i]-1 + k ] -1;
-                        SET_VECTOR_ELT(targetcol, rownum, VECTOR_ELT(RHS, k%vlen));
-                    }
-                    break;
-                case INTSXP :
-                case LGLSXP :
-                    for (k=0; k<grpn; k++) {
-                        rownum = INTEGER(order)[ INTEGER(starts)[i]-1 + k ] -1;
-                        INTEGER(targetcol)[rownum] = INTEGER(RHS)[k%vlen];
-                    }
-                    break;
-                case REALSXP :
-                    for (k=0; k<grpn; k++) {
-                        rownum = INTEGER(order)[ INTEGER(starts)[i]-1 + k ] -1;
-                        REAL(targetcol)[rownum] = REAL(RHS)[k%vlen];
-                    }
-                    break;
-                default :
-                    error("Unsupported type");
                 }
             }
             UNPROTECT(1);
