@@ -8,6 +8,8 @@ This NEWS file summarises the main changes.
         **                                          **
         **   CHANGES IN DATA.TABLE VERSION 1.8.3    **
         **                                          **
+        **          R-Forge, not yet CRAN           **
+        **                                          **
         **********************************************
         
 NEW FEATURES
@@ -42,6 +44,9 @@ NEW FEATURES
             DT[,eval(mycols):=1L]                # same
             DT[,mycols:=1L,with=FALSE]           # same
             DT[,c("existingcol","newcol"):=1L]   # same (with=FALSE not needed)
+            
+    o   Multiple LHS:= and `:=`(...) now work by group, and by without by. Implementing
+        or fixing, and thanks to, #2215 (Florian Oswald), more to add ...
         
 
 BUG FIXES
